fixed shift in chrome

--- a/src/style/intro.css
+++ b/src/style/intro.css
@@ -12,7 +12,7 @@
 .bold { font-weight: bold; }
 
 .place-middle{
-  max-width: 850px;
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
   margin-top: -90px;
