--- a/src/style/training.css
+++ b/src/style/training.css
@@ -9,7 +9,7 @@
   height: 57px;
   left: -337px;
   margin-top: 326px;
-  margin-left: 6px;
+  margin-left: 4px;
   float: left;
   Display: flex;
   Align-Items: center;
